# linktree_recs_apps

./: README.md
models/recommender_inference/: Makefile  pyproject.toml
models/recommender_inference/recommender_model/: model_inference.py
models/recommender_inference/recommender_model/model/: list_apps_per_index.joblib
models/recommender_inference/tests/unit/: test_model_inference.py
models/train_recommender_model/: Makefile  pyproject.toml
models/train_recommender_model/src/: model_creation.py  model_evaluation.py  training_data.py
research/: linktree_data_exploration.ipynb  pyproject.toml
