[tool.poetry]
name = "recommender_inference"
version = "0.1.0"
description = ""
authors = ["gilbertomryum16 <gilbertofp16@gmail.com>"]
packages = [
    { include = "recommender_model" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.990"
scikit-learn = "^1.1.3"
pyarrow = "^10.0.0"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"